{
    "name": "inpt_cnpt_Input",
    "maps": [
        {
            "name": "Slime",
            "id": "3991cbad-1a83-4b5f-b327-40be0ff80e47",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f7e3b5ac-4f77-4a9a-917c-2284cef2d13b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "11163f91-d9ae-48b2-9cfb-1536f8de3acb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextForm_Slime",
                    "type": "Button",
                    "id": "d7212b87-b796-47ed-a7c9-8601e0e5f835",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextForm_Spider",
                    "type": "Button",
                    "id": "6818c4b7-b856-4801-9213-bcbc4878c318",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextForm_Firefly",
                    "type": "Button",
                    "id": "b18bc9f6-4d7d-4c39-9c3a-16be0fba0ac4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HoldSkill",
                    "type": "Button",
                    "id": "ca9451b5-0cec-469d-87f0-6b0d5b987531",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.1)"
                },
                {
                    "name": "Skill_1",
                    "type": "Button",
                    "id": "dd3d2d59-6034-4ba7-b12f-9bdf41cbaa3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill_2",
                    "type": "Button",
                    "id": "6a4c3d4b-4580-4aba-b91e-c38dbeb97c70",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "e522c592-0d10-4b8a-a820-62a27f3c3c15",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a58f2d9c-9d34-4852-b21a-eec80dcba01f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard+Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92a38c9d-dbd8-4782-9323-dfb4a0574785",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard+Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88941862-b002-469e-8948-7ae480ab5be6",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard+Mouse",
                    "action": "NextForm_Slime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3188596-09ce-4e13-8d6b-9576bb62aa52",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard+Mouse",
                    "action": "NextForm_Spider",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc5534ef-61fb-41e7-abd2-49cd72cf99cb",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard+Mouse",
                    "action": "NextForm_Firefly",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2c0befc-f608-43e2-b6c7-951f3ba7c0e0",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard+Mouse",
                    "action": "HoldSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "a5686efb-62f2-4c46-940a-53bb54742157",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "411b8634-dd75-421a-9c62-e403f76c348d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard+Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b1920803-fe87-4ae4-97e9-9212ec522e8d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard+Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "281ce590-a1a8-43d1-8007-1c8569dcdb6a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard+Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0d9f826c-a013-4180-8b8c-d62eec83aef6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard+Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cbbdebbd-9577-4640-9231-843a26ec43e4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard+Mouse",
                    "action": "Skill_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec642101-24ef-40e4-b197-8752970fba56",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard+Mouse",
                    "action": "Skill_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b20d222-03c7-4981-9a03-08226284d263",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard+Mouse",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "4c07d217-72a2-4ba6-a93e-629b6fc8f3ea",
            "actions": [
                {
                    "name": "ReturnToPreviousMenu",
                    "type": "Button",
                    "id": "f24a44c9-bea1-4fe1-9c8d-73722b973db0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d744ee80-af8a-4e6e-b08d-da7efad88e9f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReturnToPreviousMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoard+Mouse",
            "bindingGroup": "KeyBoard+Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}